src/xsb/xsb-prolog.lisp

                             :language
                             :ansi-c)
(fli:define-foreign-function (is-nil "is_nil" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (is-functor "is_functor" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (is-charlist "is_charlist" :source)
                             ((arg-1 prolog-term)
                              (arg-2 (:pointer :int)))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (is-attv "is_attv" :source)
                             ((arg-1 prolog-term))
                             :result-type
                             xsbbool
                             :language
                             :ansi-c)
(fli:define-foreign-function (c2p-term "c2p_term" :source)
                             ((arg-1 (:pointer :char))
                              (arg-2 (:pointer :char))
                              (arg-3 prolog-term))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (p2c-term "p2c_term" :source)
                             ((arg-1 (:pointer :char))
                              (arg-2 (:pointer :char))
                              (arg-3 prolog-term))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-c-typedef (vfile (:foreign-name "vfile")) (:pointer :char))
(fli:define-foreign-function (vfile-open "vfile_open" :source)
                             nil
                             :result-type
                             (:pointer :char)
                             :language
                             :ansi-c)
(fli:define-foreign-function (vfile-obj "vfile_obj" :source)
                             nil
                             :result-type
                             (:pointer :char)
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-init "xsb_init" :source)
                             ((arg-1 :int)
                              ;(arg-2 (:pointer (:pointer :char))))
                              (arg-2 (:pointer (:pointer (:unsigned :char)))))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-init-string
                              "xsb_init_string"
                              :source)
                             ;((arg-1 (:pointer :char)))
                             ((arg-1 (:reference-pass :ef-mb-string)))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-command "xsb_command" :source)
                             nil
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-command-string
                               "xsb_command_string"
                               :source)
                              ;((arg-1 (:pointer :char)))
                              ((arg-1 (:reference-pass :ef-mb-string)))
                              :result-type
                              :int
                              :language
                              :ansi-c)
(fli:define-foreign-function (xsb-query "xsb_query" :source)
                             nil
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-query-string
                              "xsb_query_string"
                              :source)
                             ;;((arg-1 (:pointer (:unsigned :char))))
                             ((arg-1 (:reference-pass :ef-mb-string)))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-query-string-string
                              "xsb_query_string_string"
                              :source)
                             ;((arg-1 (:pointer :char))
                             ((arg-1 (:pointer (:unsigned :char)))
                              (arg-2 (:pointer varstring))
                              ;(arg-3 (:pointer :char)))
                              (arg-3 (:pointer (:unsigned :char))))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-query-string-string-b
                              "xsb_query_string_string_b"
                              :source)
                             ((arg-1 (:pointer :char))
                              (arg-2 (:pointer :char))
                              (arg-3 :int)
                              (arg-4 (:pointer :int))
                              (arg-5 (:pointer :char)))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-next "xsb_next" :source)
                             nil
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-next-string
                              "xsb_next_string"
                              :source)
                             ((arg-1 (:pointer varstring))
                              ;(arg-2 (:pointer :char)))
                              (arg-2 (:pointer (:unsigned :char))))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-next-string-b
                              "xsb_next_string_b"
                              :source)
                             ((arg-1 (:pointer :char))
                              (arg-2 :int)
                              (arg-3 (:pointer :int))
                              (arg-4 (:pointer :char)))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-get-last-answer-string
                              "xsb_get_last_answer_string"
                              :source)
                             ((arg-1 (:pointer :char))
                              (arg-2 :int)
                              (arg-3 (:pointer :int)))
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-close-query
                              "xsb_close_query"
                              :source)
                             nil
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (xsb-close "xsb_close" :source)
                             nil
                             :result-type
                             :int
                             :language
                             :ansi-c)
(fli:define-foreign-function (print-pterm "print_pterm" :source)
                             ((arg-1 cell)
                              (arg-2 :int)
                              (arg-3 (:pointer varstring)))
                             :result-type
                             :void
                             :language
                             :ansi-c)
(fli:define-foreign-function (p-charlist-to-c-string
                              "p_charlist_to_c_string"
                              :source)
                             ((term prolog-term)
                              (buf (:pointer varstring))
                              (in-func (:pointer :char))
                              (where (:pointer :char)))
                             :result-type
                             (:pointer :char)
                             :language
                             :ansi-c)
